--- a/style.css
+++ b/style.css
@@ -34,3 +34,29 @@
     left: 50px;
     color: rgb(203, 203, 203);
 }
+
+.card {
+    display: flex;
+    justify-content: center;
+}
+
+.card div {
+    width: 200px;
+    border: 1px solid black;
+    border-radius: 30px;
+    margin: 20px;
+}
+
+.card img {
+    width: 100%;
+    border-radius: 30px 30px 0 0;
+}
+
+.card h3 {
+    text-align: center;
+}
+
+.card p {
+    padding: 0 20px;
+    margin-bottom: 5px;
+}
