--- a/style.css
+++ b/style.css
@@ -30,11 +30,18 @@
 }
 .hero-text{
     position: absolute;
-    top:50px;
-    left: 50px;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     color: rgb(203, 203, 203);
+    font-size: 18px;
+}
+.hero-image h1{
+    text-shadow: 6px 7px 2px rgba(210,201,201,0.6);
+    font-size: 4vw;
 }
 
+/*Card*/
 .card {
     display: flex;
     justify-content: center;
@@ -60,3 +67,64 @@
     padding: 0 20px;
     margin-bottom: 5px;
 }
+
+
+/*Form*/
+
+form{
+    background-color: rgb(60, 60, 60);
+    padding: 20px;
+    width: 50%;
+    margin: auto;
+}
+form .form{
+    width: 50%;
+    margin: auto;
+}
+form h3{
+    color: white;
+    text-align: center;
+    margin-bottom: 10px;
+}
+form input[type=text], select{
+    width: 100%;
+    background-color: rgb(90, 90, 90);
+    color: white;
+    border: none;
+    border-radius: 20px;
+    padding: 10px;
+    margin: 10px 0;
+}
+form input[type=text]:focus{
+    background-color: rgb(53, 53, 53);
+}
+form label{
+    color: white;
+    font-size: 18px;
+}
+form .buton{
+    width: 50%;
+    margin: auto;
+}
+
+form input[type=submit]{
+    width: 100%;
+    margin-top: 30px;
+    border-radius: 10px;
+    border: none;
+    background-color: rgb(0, 0, 0);
+    padding: 10px;
+    color: white;
+    font-size: 20px;
+}
+
+/*Footer*/
+.footer{
+    background-color: chartreuse;
+    text-align: center;
+    padding: 50px;
+    margin-top: 10px;
+}
+
+
+
